# cryptsetup-deluks

./: .gitignore  README.md  configure.ac
lib/: Makefile.am  internal.h  libcryptsetup.h  libcryptsetup.sym  setup.c  utils.c  utils_benchmark.c  utils_crypt.c
lib/crypto_backend/: crypto_backend.h  crypto_kernel.c  crypto_nettle.c  crypto_nss.c  pbkdf_check.c
lib/crypto_backend/argon2/: Makefile.am
lib/deluks1/: Makefile.am  deluks.h  keyencryption.c  keymanage.c
lib/luks1/: af.c  af.h  keyencryption.c  keymanage.c  luks.h
lib/luks2/: Makefile.am  luks2.h  luks2_digest.c  luks2_digest_luks1.c  luks2_disk_metadata.c  luks2_internal.h  luks2_json_format.c  luks2_json_metadata.c  luks2_keyslot.c  luks2_keyslot_empty.c  luks2_keyslot_luks2.c  luks2_luks1_convert.c
lib/tcrypt/: tcrypt.c
misc/luks2_keyslot_example/: Makefile  keyslot_test.c
po/: cs.po  da.po  de.po  es.po  fi.po  fr.po  id.po  it.po  nl.po  pl.po  pt_BR.po  sr.po  sv.po  uk.po  vi.po  zh_CN.po
scripts/: cryptroot-boot  cryptroot-hook
src/: cryptsetup.c  veritysetup.c
tests/: Makefile.am  compat-test2  luks2-validation-test
tests/generators/: generate-luks2-missing-keyslot-referenced-in-segment-json0.img.sh  lib.sh
